added missing script for video

--- a/Information.html
+++ b/Information.html
@@ -2,6 +2,8 @@
 layout: information
 ---
 
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
+
 <p >CoApp intends to:</p>
 <ol>
 <li>Provide a&nbsp;<a rel="internal" href="http://www.coapp.org/Blueprints/X._Archives_of_older_pages/Packages" style="color: #3366cc;">specification for package types</a>&nbsp;and how applications are packaged, so that they can behave themselves in a common ecosystem.</li>
@@ -14,7 +16,7 @@ layout: information
 </ol>
 
 <p id="coapp-intro"></p>
-<script type="text/javascript">// <![CDATA[
+<script type="text/javascript">
    var flashvars = {
       'file': 'http://cdn.coapp.org/media/Default/files/videos/coapp.flv',
       'image': 'http://cdn.coapp.org/media/Default/files/videos/coapp.png'
@@ -31,4 +33,4 @@ layout: information
    };
 
    swfobject.embedSWF('http://cdn.coapp.org/media/Default/jwplayer/player.swf', 'coapp-intro', '575', '457', '9', 'false', flashvars, params, attributes);
-// ]]></script>
+</script>
