--- a/Packages.html
+++ b/Packages.html
@@ -1,8 +1,4 @@
 ---
 layout: packages
 ---
-This is where Info about packages can go
-asdasd
-asd
-asd
-asd
+(This is where Info about packages can go)
