--- a/src/dynamic/index.html
+++ b/src/dynamic/index.html
@@ -6,6 +6,11 @@ title: 'Home'
 <!-- Main hero unit for a primary marketing message or call to action -->
 <div class="hero-unit" >
 	<h1>CoApp</h1>
+    <p>
+        <br/><span class="label success">BREAKING NEWS: </span><br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/news/2012-07-19-Released-at-last.html">Announcing our first release of the CoApp package management system</a>
+        <hr/>
+    </p>
+    
 	<p>
 		<b>CoApp</b> is an open-source package management system for Windows.
         <br><br> The goal of the CoApp project is to create a community of developers dedicated to creating a set of tools and processes that enable other open source developers to create and maintain their open source products with Windows as a primary build target.
