updated title page

--- a/src/dynamic/index.html
+++ b/src/dynamic/index.html
@@ -7,7 +7,7 @@ title: 'Home'
 <div class="hero-unit" >
 	<h1>CoApp</h1>
     <p>
-        <br/><span class="label success">Latest News: </span><br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><a href="/news/2012-12-11-Package-Management-And-The-Road-Ahead.html">Package Management and the Road Ahead</a></b> <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Finding out what we've been up to the last four months.
+        <br/><span class="label success">Latest News: </span><br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><a href="/news/2013-03-27-The-Long-Awaited-post.html">The long awaited "Just what the heck *are* you doing?" post...</a></b> <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Finding out what we've been up to the last few months.
         <hr/>
     </p>
     
