--- a/src/dynamic/index.html
+++ b/src/dynamic/index.html
@@ -7,7 +7,7 @@ title: 'Home'
 <div class="hero-unit" >
 	<h1>CoApp</h1>
     <p>
-        <br/><span class="label success">Latest News: </span><br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><a href="/news/2013-03-27-The-Long-Awaited-post.html">The long awaited "Just what the heck *are* you doing?" post...</a></b> <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Finding out what we've been up to the last few months.
+        <br/><span class="label success">Latest News: </span><br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><a href="/news/2013-04-04-Trust-And-Identity.html">Trust, Identity and Stuff (uh, packages).</a></b> <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A quick rant about Digital Signing and how we can do it without too much pain and suffering.
         <hr/>
     </p>
     
