--- a/src/dynamic/index.html
+++ b/src/dynamic/index.html
@@ -7,7 +7,9 @@ title: 'Home'
 <div class="hero-unit" >
 	<h1>CoApp</h1>
     <p>
-        <br/><span class="label success">Latest News: </span><br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><a href="/news/2013-04-04-Trust-And-Identity.html">Trust, Identity and Stuff (uh, packages).</a></b> <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A quick rant about Digital Signing and how we can do it without too much pain and suffering.
+        <br/><span class="label success">Latest News: </span><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><a href="/news/2013-04-19-Northwest-Hackathon.html">Announcing the Northwest Hackathon!</a></b><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;An opportunity for Open Source Developers  to come together, and get some things done...
         <hr/>
     </p>
     
