blog post release

--- a/src/dynamic/index.html
+++ b/src/dynamic/index.html
@@ -8,8 +8,8 @@ title: 'Home'
 	<h1>CoApp</h1>
     <p>
         <br/><span class="label success">Latest News: </span><br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><a href="/news/2013-04-19-Northwest-Hackathon.html">Announcing the Northwest Hackathon!</a></b><br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;An opportunity for Open Source Developers  to come together, and get some things done...
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><a href="/news/2013-04-26-Announcing-CoApp-Tools-For-NuGet.html">Announcing CoApp PowerShell tools for NuGet 2.5</a></b><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We're pleased to announce the availability of NuGet 2.5 and the CoApp PowerShell tools beta ...
         <hr/>
     </p>
     
