changed package link

--- a/src/dynamic/index.html
+++ b/src/dynamic/index.html
@@ -25,9 +25,9 @@ title: 'Home'
 <div class="row" style="">
 	<div class="span40">
 		<h2>Software Packages</h2>
-		<p>Even though we're still in beta, we've begun building packages of open source software, so feel free to check out the list of software available.
-        <br><br>If you do run into troubles, you can check out our <a href="/pages/help.html">support pages.</a></p>
-        <p><a class="btn success" href="/pages/packages.html">Get Software &raquo;</a></p>
+		<p>Currently, you can find our C/C++ NuGet packages in <a href="http://nuget.org/packages?q=tags%3Anative"> NuGet's Package Repository</a>.
+        </p>
+        <!-- <p><a class="btn success" href="/pages/packages.html">Get Software &raquo;</a></p> -->
 	</div>
 	<div class="span40">
 		<h2>Developers Needed!</h2>
