added blog post

--- a/src/dynamic/index.html
+++ b/src/dynamic/index.html
@@ -8,13 +8,13 @@ title: 'Home'
 	<h1>CoApp</h1>
     <p>
         <br/><span class="label success">Latest News: </span><br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><a href="/news/2013-04-26-Announcing-CoApp-Tools-For-NuGet.html">Announcing CoApp PowerShell tools for NuGet 2.5</a></b><br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We're pleased to announce the availability of NuGet 2.5 and the CoApp PowerShell tools beta ...
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><a href="/news/2013-10-02-State-of-CoApp.html">State of the CoApp Project</a></b><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Where I talk about where we are, and what's coming up next...
         <hr/>
     </p>
     
 	<p>
-		<b>CoApp</b> is an open-source package management system for Windows.
+		<b>CoApp</b> is a set of open source tools for building C/C++ NuGet packages for Windows.
         <br><br> The goal of the CoApp project is to create a community of developers dedicated to creating a set of tools and processes that enable other open source developers to create and maintain their open source products with Windows as a primary build target.
         
 	</p>
